<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">


    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.diyarna.presentation.main.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/home_fragment" />

    <fragment
        android:id="@+id/nav_product"
        android:name="com.example.diyarna.presentation.main.products.ProductFragment"
        android:label="@string/products"
        tools:layout="@layout/product_fragment" />

    <fragment
        android:id="@+id/nav_campaign"
        android:name="com.example.diyarna.presentation.main.campaign.CampaignFragment"
        android:label="@string/campaigns"
        tools:layout="@layout/campaign_fragment" />

</navigation>