<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/moneyAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/custom_amount"
        android:gravity="center"
        android:textColor="@color/orange50"
        android:textColorHint="@color/orange50"
        app:layout_constraintEnd_toStartOf="@id/currency"
        android:inputType="numberDecimal"
        />

    <TextView
        android:id="@+id/currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/moneyAmount"
        android:text="@string/egp"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/orange50"

        />

    <Button
        android:id="@+id/donate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:text="@string/donate_now"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moneyAmount" />

</androidx.constraintlayout.widget.ConstraintLayout>