<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">
    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/close_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@color/darkOrange"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/addCart"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_baseline_close_24"
        app:layout_constraintBottom_toBottomOf="@id/close_back"
        app:layout_constraintEnd_toEndOf="@id/close_back"
        app:layout_constraintStart_toStartOf="@id/close_back"
        app:layout_constraintTop_toTopOf="@id/close_back" />

    <RadioGroup
        android:id="@+id/langRG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <RadioButton
            android:id="@+id/arabicRBtn"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:buttonTint="@color/colorPrimaryDark"
            android:fontFamily="@font/din_next_regular"
            android:text="@string/arabic_language"
            android:textColor="@color/black"
            />

        <RadioButton
            android:id="@+id/englishRBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:buttonTint="@color/colorPrimaryDark"
            android:checked="false"
            android:fontFamily="@font/din_next_regular"
            android:textColor="@color/black"
            android:text="@string/english_language"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/arabicRBtn" />

    </RadioGroup>


    <ImageView
        android:id="@+id/arFlag"
        android:layout_width="70dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="@+id/langRG"
        app:layout_constraintTop_toTopOf="@+id/langRG"
        android:padding="8dp"
        app:srcCompat="@drawable/flag_egypt" />

    <ImageView
        android:layout_width="70dp"
        android:layout_height="?attr/actionBarSize"
        android:padding="8dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@+id/arFlag"
        app:layout_constraintEnd_toEndOf="@+id/arFlag"
        app:layout_constraintTop_toBottomOf="@+id/arFlag"
        app:srcCompat="@drawable/america" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/langRG"
        android:gravity="center"
        android:background="@drawable/button_shape"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/save"
        android:textColor="@color/white"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>